--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+body{
+    background-color: #222831;
+}
+
+input , textarea{
+    border: solid;
+}
+button{
+    border: solid;
+    background-color: brown;
+    color:white;
+    padding-left:5px;
+    padding-right:10px;
+    height: 40px;
+    width: 100px;
+}
